styles.css
/* MAIN CSS  */


body{
    margin: 0;
    
}

.grid-container{
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;
    grid-template-areas: 
        "header"
        "navigation"
        "main";
}

.grayLine{
    border-top: 2px solid lightgray;
    margin-top: 1em;
}


/* HEADER CSS */
header{
    grid-area: header;
    background-color: #5f55b5;
    display: flex;
    justify-content: space-between;
    color:white;
    padding-bottom: .7em;
    
}
header h1{
    font-size: 1.2em;
    margin-left: .5em;
    font-weight: lighter;
    margin-top: 1.1em;
}



.bell{
    padding-left: 1em;
}
.bell svg{
    fill:white;
    height: 20px;
    width:20px;
    margin-top: 1.5em;

}

.circle{
    display: flex;
    position: absolute;
    top:10px;
    margin-left: 1em;
    margin-top: .5em;
    background: greenyellow;
    border-radius: 50%;
    width: 5px;
    height: 5px;

}


nav{
    background-color: #271642;
    justify-content: center;
    display: flex;
    padding-top: .5em;
    padding-bottom: .5em;
    padding-right: 1.5em;
    
}

nav svg{
    height: 25px;
    width: 25px;
    fill: white;
    align-content: space-between;
    margin-left: 1.6em;
    
}

.v1{
    border: .01em solid  white;
    height: 2em;
    margin-top: 1em;
}



.endContainer{
    
    display: flex;
    text-align: end;
    margin-top: .8em;
    margin-right: .7em;
    font-size: .8em;
}



#memberImg{
    width: 33px;
    height: 33px;
    margin-top: .4em;
    margin-right: .7em;
    border-radius: 25px;
}

.navigation{
    grid-area: navigation;
}

.main{
    grid-area: main;
    display:grid;

}
.main-header{
    display: flex;
}


.main-header h2 {
    font-size: large;
    font-weight: lighter;
    margin: 0;
    padding-left: .5em;
    padding-right: 1.5em;
    margin-top: .8em;
}

.main-header-search{
    padding-top: .9em;
    padding-left: 1em;
    padding-bottom: .9em;
}

.main-header-search input{
    width: 90%;
}


.background-search{
    background-color: #ededed;
    width: 100%;
    height: 100%;
    border-color: none gray none gray;
}

.alert-banner{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #5f55b5;
    width: 80%;
    font-size: 14px;
    margin-left: 1.5em;
    margin-top: 1.5em;
    height: 3em;
    color: white;
    border-radius: 5px;
    padding-left: 1em;
    padding-right: 1em;
    
}

.alert-banner-close{
    margin: 0;
    padding-top: .8em;
    cursor: pointer;
    
    
}
/* TRAFFIC CSS */

.traffic{
    margin-top: 2em;
    margin-left: .5em;
    margin-right: .5em;
}

.traffic-header h3{
    font-size: small;
    font-weight: bold;
    padding-left: 1.6em;
}

.traffic-nav{
    display: flex;
    justify-content: space-between;
    list-style-type: none;
    padding: 0 4em 0 1.5em;
}

.traffic-nav-link{
    cursor: pointer;
}

#daily-chart{
    margin-left: 1em;
    margin-right: 1em;
}


.daily h3{
    font-size: small;
    font-weight: bold;
    padding-left: 1.6em;
}


.widget-container-full, .widget-container-half{
    width: 95vw;
}

/* MOBILE CHART CSS ///////////////////////*/

.chart-container{
    display: relative;
    height:100%; 
    width:80%;
    margin-left: 3em;
   
}
.mobileUsers h3 {
    font-size: small;
    font-weight: bold;
    padding-left: 1.6em;
}


/* SOCIAL STATS CSS*/
#social-stats{
    font-size: small;
    font-weight: bold;
    padding-left: 1.6em;
}

.social-container{
    background-color: lightgray;
    margin-left: 1em;
    margin-right: 1em;
    border-radius: 10px;
    

    
}
.social-wrapper{
    display: flex;
    margin-bottom: 1em;
}

.social-text{
    margin-left: 1em;
    color:#5f55b5 ;
    font-weight: bold;
}

.social-text p{
    margin-top: 1em;
    margin-bottom: 0;
}

#follows{
    margin-top: 0;
    margin-bottom: .5em;
    font-size: xx-large;
    color: black;
}

.social-image svg {
    width: 30px;
    height: 30px;
    fill: white;
    margin-left:15px;
    margin-top: 15px;
    

}

.social-image{
    border-radius: 50%;
    height: 60px;
    width: 60px;
    background-color: #5f55b5;
    margin-top: .75em;
    margin-left: 1em;
}

/*NEW MEMBERS CSS//////////////////////////////////////////// */
#new-member-line{
    margin: 0;
}

#newMembers{
    margin-top: 0;
    margin-left: .75em;
    margin-bottom: 0;
}

.profit-image{
    width: 60px;
    height: 60px;
    border-radius: 30px;
   

}

.members-container{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 150px ;
    

}

.members-container a{
    text-decoration: none;
    color: gray;
}


.members-text p {
    margin: 0;
    text-align: center;
}

#date{
    margin: 0;
}


/* RECENT ACTIVITY CSS */

#recentH3{
    font-size: .9em;
    margin: 0 0 0 1em;
}

#recentP{
    text-align: center;
    margin: 0 2em 0 2em;
}

#post-time{
    text-align: center;
}

/* MESSAGE USER  */
#messageH3, .settings h3{
    margin: .5em 0 1em .8em;
}

#userField, #messageField, #timezone{
    width: 80%;
    padding: .75em 0 .75em 1em;
    margin-left: 1em;
    margin-bottom: 1em;
    background-color:lightgray;
    border-radius: 5px;
}

#messageField{
    padding-bottom: 6em;
}

.button-primary , #cancel{
    width: 84%;
    margin-left: 1em;
    margin-bottom: 1em;
    padding-top: .75em;
    padding-bottom: 1em;
    background-color:#5f55b5 ;
    border-radius:  5px;
    color:lightgray;
}

/* TOGGLE CSS CODE///////////////////////////////////// */

.toggle h4 {
    margin-left: 1em;
}

.toggle{
    display: flex;
}

.switch {
    position: relative;
    display: inline-block;
    width: 85px;
    height: 30px;
    margin: 1em 0 0 1em;
  }

  #switch2{
      margin-left: 3em;
  }
  
  /* .switch input { 
    opacity: 0;
    width: 0;
    height: 0;
  }
   */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 20px;
    width: 20px;
    left: 6px;
    bottom: 5px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  .slider.round h4{
      color: #ccc;
      margin: .4em 0 0 .5em;
  }
  
  input:checked + .slider {
    background-color: #5f55b5;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #5f55b5;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(52px);
    -ms-transform: translateX(52px);
    transform: translateX(52px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
  

/* SETTINGS CSS //////////////////////////////////////////*/

.settings-button{
    width:83%;
    display: flex;
    
}

#cancel{
    background-color: gray;
}






@media(min-width:768px){
    .grid-container{
        grid-template-columns: 55px 1fr;
        grid-template-areas:
            "header header"
            "navigation main";
    }



    .main{
        grid-template-columns: 50%;
    }

    .traffic,.social{
        grid-column: 1/2;
    }

    .daily, .members, .message{
        grid-column:1/1; 
    }

    .mobile, .activity, .settings{
        grid-column: 2/3; 
    }

    .widget-container-full{
        width: 90vw;
    }

    .widget-container-half{
        width: 45%;
    }
}

